--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ server.port=8080
 spring.datasource.url=jdbc:postgresql://castor.db.elephantsql.com:5432/cwecoaup
 spring.datasource.username=cwecoaup
 spring.datasource.password=Hr_WTwy3_PEWJznyZ5zj_cF0PlJIT5n9
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
 spring.datasource.dbcp2.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
